--- a/Substation Builder/View/SubstationView.xaml
+++ b/Substation Builder/View/SubstationView.xaml
@@ -21,8 +21,8 @@
             </EventTrigger>
         </StackPanel.Triggers>
 
-        <Label Content="Substation Data" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16"/>
-       
+        <Label Content="Substation Data" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18"/>
+
         <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
             <Grid HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
@@ -30,18 +30,18 @@
                     <ColumnDefinition Width="150"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0">
-                    <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9"/>
-                    <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9"/>
-                    <Label Content="Bus Type:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9"/>
+                    <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="14"/>
+                    <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="14"/>
+                    <Label Content="Bus Type:" HorizontalContentAlignment="Right" Margin="0,1" Opacity="0.9" FontSize="14"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1">
-                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9"/>
-                    <ComboBox Text="{Binding SubType, UpdateSourceTrigger=PropertyChanged}" Margin="4,1">
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9" FontSize="14"/>
+                    <ComboBox Text="{Binding SubType, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" FontSize="14">
                         <ComboBoxItem Content="Open Air"/>
                         <ComboBoxItem Content="Switchgear"/>
                         <ComboBoxItem Content="Recloser"/>
                     </ComboBox>
-                    <ComboBox Text="{Binding BusType, UpdateSourceTrigger=PropertyChanged}" Margin="4,1">
+                    <ComboBox Text="{Binding BusType, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" FontSize="14">
                         <ComboBoxItem Content="Single Bus"/>
                         <ComboBoxItem Content="Double Bus"/>
                     </ComboBox>
@@ -49,7 +49,7 @@
             </Grid>
         </Border>
 
-        <Label Content="System Base" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16"/>
+        <Label Content="System Base" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18"/>
         <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
             <Grid HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
@@ -57,14 +57,14 @@
                     <ColumnDefinition Width="60"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0">
-                    <Label Content="Base MVA:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
-                    <Label Content="High Voltage:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
-                    <Label Content="Low Voltage:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
+                    <Label Content="Base MVA:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9" FontSize="14"/>
+                    <Label Content="High Voltage:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9" FontSize="14"/>
+                    <Label Content="Low Voltage:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9" FontSize="14"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1" Grid.ColumnSpan="2">
-                    <TextBox Text="{Binding MVA}" Margin="4,1" Opacity="0.9"/>
-                    <TextBox Text="{Binding HighVoltage}" Margin="4,1" Opacity="0.9"/>
-                    <TextBox Text="{Binding LowVoltage}" Margin="4,1" Opacity="0.9"/>
+                    <TextBox Text="{Binding MVA}" Margin="4,1" Opacity="0.9" FontSize="14"/>
+                    <TextBox Text="{Binding HighVoltage}" Margin="4,1" Opacity="0.9" FontSize="14"/>
+                    <TextBox Text="{Binding LowVoltage}" Margin="4,1" Opacity="0.9" FontSize="14"/>
                 </StackPanel>
 
             </Grid>
