--- a/Substation Builder/View/TheveninView.xaml
+++ b/Substation Builder/View/TheveninView.xaml
@@ -6,69 +6,76 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       Title="Thevenin" >
-    
-    <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
-        <!-- Thevenin Template -->
-        <StackPanel Width="214">
-            
-            <StackPanel.Triggers>
-                <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Duration="0:0:0.7" Storyboard.TargetProperty="Opacity" From="0" To="1" />
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </StackPanel.Triggers>
-            
-            <DockPanel>
-                <Label Width="44" Content="Name:" Opacity="0.9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,1"/>
-                <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Center" Opacity="0.9" Margin="4,0,4,2" Width="143"/>
-            </DockPanel>
 
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="44"/>
-                    <ColumnDefinition Width="170"/>
-                </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0">
-                    <Label Content="R1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="X1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="R2:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="X2:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="R0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="X0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                </StackPanel>
+    <!-- Thevenin Template -->
+    <StackPanel Width="214">
 
-                <StackPanel  Grid.Column="1" x:Name="TheveninPage">
+        <StackPanel.Triggers>
+            <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Duration="0:0:0.7" Storyboard.TargetProperty="Opacity" From="0" To="1" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </StackPanel.Triggers>
 
-                    <Grid Margin="0,0,10,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="75"/>
-                            <ColumnDefinition Width="75"/>
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Grid.Column="0">
-                            <TextBox Text="{Binding R1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <RadioButton  GroupName="TheveninUnits" x:Name="UseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0"/>
-                        </StackPanel>
-                        <StackPanel Grid.Column="1">
-                            <TextBox Text="{Binding R1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <RadioButton  GroupName="TheveninUnits" x:Name="UseOhm" Content="Ohms" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0"/>
-                        </StackPanel>
-                    </Grid>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
-    </Border>
+        <Label Content="Thevenin" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18"/>
+
+
+        <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
+            <StackPanel>
+                <DockPanel>
+                    <Label Width="50" Content="Name:" Opacity="0.9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,1" FontSize="14"/>
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Opacity="0.9" Width="121" FontSize="14" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                </DockPanel>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="170"/>
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel Grid.Column="0">
+                        <Label Content="R1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="X1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="R2:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="X2:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="R0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="X0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                    </StackPanel>
+
+                    <StackPanel  Grid.Column="1" x:Name="TheveninPage">
+
+                        <Grid Margin="0,0,10,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="70"/>
+                                <ColumnDefinition Width="70"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0">
+                                <TextBox Text="{Binding R1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding X1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding R2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding X2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding R0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding X0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9" FontSize="14"/>
+                                <RadioButton  GroupName="TheveninUnits" x:Name="UseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0" FontSize="14"/>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1">
+                                <TextBox Text="{Binding R1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding X1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding R2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding X2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding R0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="14"/>
+                                <TextBox Text="{Binding X0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9" FontSize="14"/>
+                                <RadioButton  GroupName="TheveninUnits" x:Name="UseOhm" Content="Ohms" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0" FontSize="14"/>
+                            </StackPanel>
+                        </Grid>
+                    </StackPanel>
+                </Grid>
+            </StackPanel>
+        </Border>
+    </StackPanel>
+
 </Page>
