--- a/Substation Builder/View/Transformer2View.xaml
+++ b/Substation Builder/View/Transformer2View.xaml
@@ -7,59 +7,68 @@
       mc:Ignorable="d" 
       Title="Transformer2View">
 
-    <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
-        <!-- Thevenin Template -->
-        <StackPanel>
-            <StackPanel.Triggers>
-                <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Duration="0:0:0.7" Storyboard.TargetProperty="Opacity" From="0" To="1" />
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </StackPanel.Triggers>
+    <!-- Thevenin Template -->
+    <StackPanel>
+        <StackPanel.Triggers>
+            <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Duration="0:0:0.7" Storyboard.TargetProperty="Opacity" From="0" To="1" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </StackPanel.Triggers>
 
-            <Grid Margin="0,5,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="80"/>
-                    <ColumnDefinition Width="70"/>
-                    <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="70"/>
-                </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0" Margin="0,26,0,0">
-                    <Label Content="Z1%:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="Z0%:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="Losses (kW):" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                </StackPanel>
+        <Label Content="Transformer" HorizontalContentAlignment="Right" Margin="4,1,0,0" Opacity="0.9" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18"/>
 
-                <StackPanel Grid.Column="1">
-                    <RadioButton  GroupName="TransformerUnits" x:Name="XFUseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4"/>
-                    <TextBox Text="{Binding Z1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding Z0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding Losses}" Margin="4,1" Opacity="0.9"/>
-                </StackPanel>
+        <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
 
-                <StackPanel Grid.Column="2" Margin="0,26,0,0">
-                    <Label Content="R1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="X1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="R0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="X0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                </StackPanel>
+            <StackPanel>
+                <Grid Margin="0,5,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="70"/>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="70"/>
+                    </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="3">
-                    <RadioButton  GroupName="TransformerUnits" x:Name="XFUseOhm" Content="Ohms" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4"/>
-                    <TextBox Text="{Binding R1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding X1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding R0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding X0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                </StackPanel>
+                    <StackPanel Grid.Column="0" Margin="0,26,0,0">
+                        <Label Content="Z1%:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="Z0%:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="Losses (kW):" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                    </StackPanel>
 
-            </Grid>
+                    <StackPanel Grid.Column="1">
+                        <RadioButton  GroupName="TransformerUnits" x:Name="XFUseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4" FontSize="14"/>
+                        <TextBox Text="{Binding Z1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="14"/>
+                        <TextBox Text="{Binding Z0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9" FontSize="14"/>
+                        <TextBox Text="{Binding Losses}" Margin="4,1" Opacity="0.9" FontSize="14"/>
+                    </StackPanel>
 
-            <Button Content="Nameplate Data" Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click"/>
-        </StackPanel>
+                    <StackPanel Grid.Column="2" Margin="0,26,0,0">
+                        <Label Content="R1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="X1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="R0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                        <Label Content="X0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9" FontSize="14"/>
+                    </StackPanel>
 
-    </Border>
+                    <StackPanel Grid.Column="3">
+                        <RadioButton  GroupName="TransformerUnits" x:Name="XFUseOhm" Content="Ohms" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4" FontSize="14"/>
+                        <TextBox Text="{Binding R1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="14"/>
+                        <TextBox Text="{Binding X1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="14"/>
+                        <TextBox Text="{Binding R0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="14"/>
+                        <TextBox Text="{Binding X0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9" FontSize="14"/>
+                    </StackPanel>
+
+                </Grid>
+
+                <Button Content="Nameplate Data" Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click" FontSize="12"/>
+
+            </StackPanel>
+        </Border>
+
+    </StackPanel>
+
+
 </Page>
